--- a/app/views/rooms/_room.html.haml
+++ b/app/views/rooms/_room.html.haml
@@ -4,7 +4,7 @@
       %span.label closed
     - else
       %span.label.label-info open
-    = link_to room.title, room
+    = link_to room.title, [room.roomable, room]
 
   %td= truncate room.description
   %td= room.created_at.to_s :db
