--- a/app/views/rooms/new.html.haml
+++ b/app/views/rooms/new.html.haml
@@ -1,5 +1,10 @@
-%h1 New room
+- content_for :sidebar do
+  = render "sidebar"
+
+- content_for :header do
+  .page-header
+    %h2
+      = t "general.create-room"
+      %small= @world.name
 
 = render 'form'
-
-= link_to 'Back', rooms_path
